--- a/builder/action.yml
+++ b/builder/action.yml
@@ -73,17 +73,26 @@ runs:
         
         find target -name "*.jar" -print0 | while read -d $'\0' fname
         do
-          echo "fname: ${fname}"
-          #echo $COUNTER
+          
+          # This works:
           bn=$(basename -- $fname)
-          echo "basename: ${bn}"
           hash=$(sha256sum $fname | awk '{print $1}')
-          echo $file
-          echo -e -n "\n    {\n      \"name\": \"attestation1.intoto\"," >> "$SLSA_OUTPUTS_ARTIFACTS_FILE"
-          echo -e -n "\n      \"subjects\": [" >> "$SLSA_OUTPUTS_ARTIFACTS_FILE"
-          echo -e -n "\n        { \"name\": \"${bn}\"," >> "$SLSA_OUTPUTS_ARTIFACTS_FILE"
-          echo -e -n "\n        \"digest\": { \"sha256\": \"${hash}\" }" >> "$SLSA_OUTPUTS_ARTIFACTS_FILE"
-          echo -e -n "\n        }\n      ]\n    }" >> "$SLSA_OUTPUTS_ARTIFACTS_FILE"
+          
+          echo "
+              {
+                \"name\": \"attestation1.intoto\",
+                \"subjects\": [
+                  { \"name\": \"${bn}\",
+                  \"digest\": { \"sha256\": \"${hash}\"  }
+                  }
+                ]
+              }" >> "$SLSA_OUTPUTS_ARTIFACTS_FILE"
+          # This works:
+          #echo -e -n "\n    {\n      \"name\": \"attestation1.intoto\"," >> "$SLSA_OUTPUTS_ARTIFACTS_FILE"
+          #echo -e -n "\n      \"subjects\": [" >> "$SLSA_OUTPUTS_ARTIFACTS_FILE"
+          #echo -e -n "\n        { \"name\": \"${bn}\"," >> "$SLSA_OUTPUTS_ARTIFACTS_FILE"
+          #echo -e -n "\n        \"digest\": { \"sha256\": \"${hash}\" }" >> "$SLSA_OUTPUTS_ARTIFACTS_FILE"
+          #echo -e -n "\n        }\n      ]\n    }" >> "$SLSA_OUTPUTS_ARTIFACTS_FILE"
 
           if [[ "$COUNTER" != "$NUM_JAR_FILES" ]]; then
             echo -n "," >> "$SLSA_OUTPUTS_ARTIFACTS_FILE"
