--- a/builder/action.yml
+++ b/builder/action.yml
@@ -78,15 +78,15 @@ runs:
           bn=$(basename -- $fname)
           hash=$(sha256sum $fname | awk '{print $1}')
           
-          echo "
+          echo -n '
               {
-                \"name\": \"attestation1.intoto\",
-                \"subjects\": [
-                  { \"name\": \"${bn}\",
-                  \"digest\": { \"sha256\": \"${hash}\"  }
+                "name": "attestation1.intoto",
+                "subjects": [
+                  { "name": "${bn}",
+                  "digest": { "sha256": "${hash}"  }
                   }
                 ]
-              }" >> "$SLSA_OUTPUTS_ARTIFACTS_FILE"
+              }' >> "$SLSA_OUTPUTS_ARTIFACTS_FILE"
           # This works:
           #echo -e -n "\n    {\n      \"name\": \"attestation1.intoto\"," >> "$SLSA_OUTPUTS_ARTIFACTS_FILE"
           #echo -e -n "\n      \"subjects\": [" >> "$SLSA_OUTPUTS_ARTIFACTS_FILE"
