--- a/builder/action.yml
+++ b/builder/action.yml
@@ -64,7 +64,8 @@ runs:
                   }
                 ]
               }" >> "$SLSA_OUTPUTS_ARTIFACTS_FILE"
-
+          
+          # Add comma between attestations and not after the last
           if [[ "$COUNTER" != "$NUM_JAR_FILES" ]]; then
             echo -n "," >> "$SLSA_OUTPUTS_ARTIFACTS_FILE"
           fi
