--- a/gradle-builder/action.yml
+++ b/gradle-builder/action.yml
@@ -29,7 +29,9 @@ runs:
       with:
         java-version: '17'
         distribution: 'temurin'
-    - name: Run mvn package
+    - name: Setup Gradle
+      uses: gradle/gradle-build-action@v2
+    - name: Run gradlew build
       shell: bash
       run: ./gradlew build
     - name: Upload built artifacts from gradlew build
