--- a/gradle-builder/action.yml
+++ b/gradle-builder/action.yml
@@ -24,11 +24,12 @@ on:
 runs:
   using: 'composite'
   steps:
+    - uses: actions/checkout@v3
     - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
-        java-version: '17'
-        distribution: 'temurin'
+        distribution: temurin
+        java-version: 11
     - name: Setup Gradle
       uses: gradle/gradle-build-action@v2
     - name: Run gradlew build
