--- a/gradle-builder/action.yml
+++ b/gradle-builder/action.yml
@@ -35,8 +35,12 @@ runs:
     #- name: Run gradlew build
     #  shell: bash
     #  run: ./gradlew --version && ./gradlew build -x test
+    - name: Checkout tools repo
+      uses: actions/checkout@v3
+      with:
+        repository: sigstore/sigstore-java
     - name: Run upstream workflow
-      uses: AdamKorcz/sigstore-java/.github/workflows/ci.yaml@main
+      uses: sigstore/sigstore-java/.github/workflows/ci.yaml@main
     - name: Upload built artifacts from gradlew build
       uses: actions/upload-artifact@v3
       with:
