--- a/.github/workflows/gradle-trw.yml
+++ b/.github/workflows/gradle-trw.yml
@@ -50,7 +50,7 @@ jobs:
           slsa-runner-label: "ubuntu-latest"
           slsa-build-action-path: "./gradle-builder"
           slsa-workflow-inputs: ${{ toJson(inputs) }}
-          artifact-list: ${{ input.artifact-list }}
+          artifact-list: ${{ inputs.artifact-list }}
       - name: run echo after slsa-setup
         run: echo "echo after slsa-setup"
   slsa-run:
