--- a/gradle-builder/action.yml
+++ b/gradle-builder/action.yml
@@ -41,12 +41,10 @@ runs:
       run: ./gradlew --version && ./gradlew build -x test -x javadoc
     - name: Put release artifacts in one directory
       shell: bash
-      env:
-        ARTIFACT_LIST: ${{ inputs.slsa-workflow-inputs.artifact-list }}
       run: |
         mkdir release-files-for-slsa
         GRADLE_VERSION=$(./gradlew properties -q | grep "version:" | awk '{print $2}')
-        #ARTIFACT_LIST="abc,def,ghij"
+        ARTIFACT_LIST=""./sigstore-java/build/local-maven-repo/dev/sigstore/sigstore-java/0.4.0/sigstore-java-0.4.0.module,./sigstore-java/build/libs/sigstore-java-0.4.0.jar""
         echo $ARTIFACT_LIST
         for i in ${ARTIFACT_LIST//,/ }
         do
