--- a/gradle-builder/action.yml
+++ b/gradle-builder/action.yml
@@ -41,6 +41,8 @@ runs:
       run: ./gradlew --version && ./gradlew build -x test -x javadoc
     - name: Put release artifacts in one directory
       shell: bash
+      env:
+        SLSA_OUTPUTS_ARTIFACTS_FILE: ${{ inputs.slsa-layout-file }}
       run: |
         mkdir release-files-for-slsa
         GRADLE_VERSION=$(./gradlew properties -q | grep "version:" | awk '{print $2}')
@@ -55,6 +57,43 @@ runs:
           echo $bn
           mv $PATH_WITH_VERSION release-files-for-slsa/$bn
         done
+        
+        # "version" and "attestations" fields:
+        echo -e -n "{\n  \"version\": 1,\n  \"attestations\": [" >> "$SLSA_OUTPUTS_ARTIFACTS_FILE"
+
+        NUM_JAR_FILES=$(find ./release-files-for-slsa -type f | wc -l)
+        COUNTER=1
+        
+        # Add one attestation per .jar file:
+        find ./release-files-for-slsa -type f -print0 | while read -d $'\0' fname
+        do
+          
+          bn=$(basename -- $fname)
+          hash=$(sha256sum $fname | awk '{print $1}')
+          
+          echo -n "
+              {
+                \"name\": \"${bn}-attestation.intoto\",
+                \"subjects\": [
+                  { \"name\": \"${bn}\",
+                  \"digest\": { \"sha256\": \"${hash}\"  }
+                  }
+                ]
+              }" >> "$SLSA_OUTPUTS_ARTIFACTS_FILE"
+          
+          # Add comma between attestations and not after the last
+          if [[ "$COUNTER" != "$NUM_JAR_FILES" ]]; then
+            echo -n "," >> "$SLSA_OUTPUTS_ARTIFACTS_FILE"
+          fi
+          
+          COUNTER=$[$COUNTER +1]
+        done
+        
+        # Close "attestations" and "version":
+        echo -e "\n  ]" >> "$SLSA_OUTPUTS_ARTIFACTS_FILE"
+        echo "}" >> "$SLSA_OUTPUTS_ARTIFACTS_FILE"
+        
+        
 
 
         #for i in ${ARTIFACT_LIST//,/ }
@@ -66,6 +105,7 @@ runs:
         #  mv $PATH_WITH_VERSION release-files-for-slsa/$bn          
         #done
         ls release-files-for-slsa
+        cat $SLSA_OUTPUTS_ARTIFACTS_FILE
     #- name: Checkout tools repo
     #  uses: actions/checkout@v3
     #  with:
