--- a/gradle-builder/action.yml
+++ b/gradle-builder/action.yml
@@ -46,7 +46,7 @@ runs:
       run: |
         mkdir release-files-for-slsa
         GRADLE_VERSION=$(./gradlew properties -q | grep "version:" | awk '{print $2}')
-        ARTIFACT_LIST=""./sigstore-java/build/local-maven-repo/dev/sigstore/sigstore-java/GRADLE_VERSION/sigstore-java-GRADLE_VERSION.module,./sigstore-java/build/libs/sigstore-java-GRADLE_VERSION.jar""
+        ARTIFACT_LIST="./sigstore-java/build/local-maven-repo/dev/sigstore/sigstore-java/GRADLE_VERSION/sigstore-java-GRADLE_VERSION.module,./sigstore-java/build/libs/sigstore-java-GRADLE_VERSION.jar"
         echo $ARTIFACT_LIST
         for i in ${ARTIFACT_LIST//,/ }
         do
