--- a/gradle-builder/action.yml
+++ b/gradle-builder/action.yml
@@ -48,7 +48,7 @@ runs:
         mkdir release-files-for-slsa
         GRADLE_VERSION=$(./gradlew properties -q | grep "version:" | awk '{print $2}')
         #ARTIFACT_LIST="./sigstore-java/build/local-maven-repo/dev/sigstore/sigstore-java/GRADLE_VERSION/sigstore-java-GRADLE_VERSION.module,\
-        ./sigstore-java/build/libs/sigstore-java-GRADLE_VERSION.jar"
+        #./sigstore-java/build/libs/sigstore-java-GRADLE_VERSION.jar"
         echo $ARTIFACT_LIST
         for i in ${ARTIFACT_LIST//,/ }
         do
