--- a/.github/workflows/gradle-trw.yml
+++ b/.github/workflows/gradle-trw.yml
@@ -3,11 +3,11 @@ on:
     inputs:
       name1:
         description: "name 1"
-        required: true
+        required: false
         type: string
       name2:
         description: "name 2"
-        required: true
+        required: false
         type: string
       rekor-log-public:
         description: "private"
