--- a/gradle-builder/action.yml
+++ b/gradle-builder/action.yml
@@ -48,6 +48,7 @@ runs:
         ARTIFACT_LIST: ${{ fromJson(inputs.slsa-workflow-inputs).artifact-list }}
       run: |
         find . -name "sigstore-java-*-javadoc.jar"
+        find . -name "*.jar"
         mkdir release-files-for-slsa
         GRADLE_VERSION=$(./gradlew properties -q | grep "version:" | awk '{print $2}')
         #ARTIFACT_LIST="./sigstore-java/build/local-maven-repo/dev/sigstore/sigstore-java/GRADLE_VERSION/sigstore-java-GRADLE_VERSION.module,\
