--- a/.github/workflows/trw.yml
+++ b/.github/workflows/trw.yml
@@ -21,6 +21,10 @@ on:
         required: true
         default: 17
         type: number
+      artifact-list:
+        description: 'comma-separated list of paths to artifacts to be released. Use GRADLEVERSION for the gradle version'
+        type: string
+        required: true
 jobs:
   demo:
     runs-on: ubuntu-latest
