--- a/.github/workflows/trw.yml
+++ b/.github/workflows/trw.yml
@@ -1,6 +1,14 @@
 on:
   workflow_call:
     inputs:
+      name1:
+        description: "name 1"
+        required: false
+        type: string
+      name2:
+        description: "name 2"
+        required: false
+        type: string
       rekor-log-public:
         description: "private"
         required: false
