--- a/builder/action.yml
+++ b/builder/action.yml
@@ -31,11 +31,11 @@ runs:
         java-version: ${{ fromJson(inputs.slsa-workflow-inputs).jdk-version }}
         distribution: 'temurin'
     - name: Run mvn package
-      if: ${{ ! inputs.build-only-source-code }}
+      if: ${{ ! fromJson(inputs.slsa-workflow-inputs).build-only-source-code }}
       shell: bash
       run: mvn package
     - name: Put release artifacts in one directory
-      if: ${{ ! inputs.build-only-source-code }}
+      if: ${{ ! fromJson(inputs.slsa-workflow-inputs).build-only-source-code }}
       shell: bash
       env:
         SLSA_OUTPUTS_ARTIFACTS_FILE: ${{ inputs.slsa-layout-file }}
